--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>descuentos</title>
-</head>
-<body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./style.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Trek</title>
+  </head>
+  <body>
+    <!-- section 1: titulo -->
+    <section class="container-title offset-1 col-10">
+        <div class="container">
+            <div class="row">
+                <div class="title-detail">
+                    <img src="./assets/user.png" alt="foto de perfil del usuario">
+                    <h1>Welcome Back,<strong>Peter</strong></h1>
+                </div>
+                <div class="heroImage col-12">
+                    <img class="col-12" src="./assets/bg.webp" alt="foto de perfil del usuario">
+                </div>
+                <div class="body-title">
+                    <p>Hay muchas clases de carreteras y muchas clases de ciclistas. Por eso hemos creado cuatro plataformas de bicicletas de carretera de alto rendimiento 
+                    diferentes. Échales un vistazo y  elige el valor comercial de cada bicicleta adecuada en función  de cómo y por dónde te gusta pedalear.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section 2: tarjetas bicicletas -->
+    <section class="container-items">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="items-title offset-1 col-10">
+                    <h4>EXPLORAR BICICLETAS</h4>
+                </div>      
+                <div class="card border-bottom offset-1 col-10">
+                    <div class="img-bike">
+                        <img src="./assets/madone.png" alt="trek madone">
+                    </div>                       
+                    <div class="card-body">
+                        <h5 class="card-title">Trek Madone</h5>
+                        <p class="card-text">La Madone simboliza la velocidad.</p>                                
+                        <div class="form col-12">
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Precio de la bicicleta</label>
+                                </div>
+                            </div>
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Agregar descuento %</label>
+                                </div>
+                            </div>     
+                            <button type="button" class="col-2 btn btn-warning">CALCULAR</button> 
+                        </div>  
+                        <p>El precio con descuento es:</p>                                            
+                    </div>               
+                </div>
+                <div class="card border-bottom offset-1 col-10">
+                    <div class="img-bike">
+                        <img src="./assets/emonda.png" alt="trek Émonda">
+                    </div>                       
+                    <div class="card-body">
+                        <h5 class="card-title">Trek Émonda</h5>
+                        <p class="card-text">La Émonda es una bicicleta ultraligera.</p>                                
+                        <div class="form col-12">
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Precio de la bicicleta</label>
+                                </div>
+                            </div>
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Agregar descuento %</label>
+                                </div>
+                            </div>     
+                            <button type="button" class="col-2 btn btn-warning">CALCULAR</button> 
+                        </div>  
+                        <p>El precio con descuento es:</p>                                            
+                    </div>               
+                </div>
+                <div class="card border-bottom offset-1 col-10">
+                    <div class="img-bike">
+                        <img src="./assets/Domane.png" alt="trek Domane">
+                    </div>                       
+                    <div class="card-body">
+                        <h5 class="card-title">Trek Domane</h5>
+                        <p class="card-text">La Domane absorbe impactos, permite rodar más rápido en cada salida.</p>                                
+                        <div class="form col-12">
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Precio de la bicicleta</label>
+                                </div>
+                            </div>
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Agregar descuento %</label>
+                                </div>
+                            </div>     
+                            <button type="button" class="col-2 btn btn-warning">CALCULAR</button> 
+                        </div>  
+                        <p>El precio con descuento es:</p>                                            
+                    </div>               
+                </div>
+                <div class="card border-bottom offset-1 col-10">
+                    <div class="img-bike">
+                        <img src="./assets/Checkpoint.png" alt="trek Checkpoint">
+                    </div>                       
+                    <div class="card-body">
+                        <h5 class="card-title">Trek Checkpoint</h5>
+                        <p class="card-text">La Checkpoint es una bicicleta polivalente de gravel.</p>                                
+                        <div class="form col-12">
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Precio de la bicicleta</label>
+                                </div>
+                            </div>
+                            <div class="col-5">
+                                <div class="form-floating">
+                                    <input type="number" class="form-control" id="inputValue" placeholder="Ingresar valor" value="Ingresar valor">
+                                    <label for="inputValue">Agregar descuento %</label>
+                                </div>
+                            </div>     
+                            <button type="button" class="col-2 btn btn-warning">CALCULAR</button> 
+                        </div>  
+                        <p>El precio con descuento es:</p>                                            
+                    </div>               
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="./descuentos.js"></script>
-</body>
+
+  </body>
 </html>
