--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <label for="discountList">Cupones con descuentos %</label>
                                 </div>
                             </div>     
-                            <button id="calculate" onclick="discontBtn()" type="button" class="col-2 btn btn-warning">CALCULAR</button> 
+                            <button id="calculate" onclick="discontBtn('Madone')" type="button" class="col-2 btn btn-warning">CALCULAR</button> 
                         </div>  
                         <div class="body-detail col-12">
                             <div class="coupon col-5">
